# leviathan-hackathon-sweden

./: .gitignore  CONTEXT.md  README.md  prep.ipynb
data/: RECORD-SCHEMA.md  known-shadow-vessels.json  seed-detections.json
data/landslide/: S1-GRD_spat-11.8763-58.0549-11.8843-58.0629_temp-2023-09-16-2023-10-01.nc  S2-L2A-10m_spat-11.8763-58.0549-11.8843-58.0629_temp-2023-09-16-2023-10-01.nc  S2-L2A-20m_spat-11.8763-58.0549-11.8843-58.0629_temp-2023-09-16-2023-10-01.nc  S2-L2A-60m_spat-11.8763-58.0549-11.8843-58.0629_temp-2023-09-16-2023-10-01.nc
docs/adr/: 0001-replicated-mirror-gossip-with-signed-records.md  0002-status-as-evidence-tier-and-verification-funnel.md
frontend/: .gitignore  package.json  pnpm-lock.yaml
frontend/app/: layout.tsx  page.tsx
frontend/app/api/sar/: route.ts
frontend/app/components/: DossierPanel.tsx  Globe.tsx  Header.tsx  ReportModal.tsx  SceneFeed.tsx  SceneView.tsx  TablesSection.tsx
frontend/app/data/: fleet.ts  scenes.ts
frontend/app/hooks/: useDetections.ts
frontend/app/lib/: mesh.ts
net/: CMakeLists.txt  Makefile  README.md
net/include/: ais.hpp  args.hpp  crypto.hpp  gossip.hpp  http_api.hpp  node.hpp  registry.hpp  seed.hpp  trust.hpp
net/keys/: trusted-keys.json
net/scripts/: gen-keys.sh  run-mesh.sh  run-rogue.sh
net/src/: main.cpp
